checked by W3 validator

--- a/contact.html
+++ b/contact.html
@@ -98,9 +98,9 @@
 
         </figure>
 
-        <small>
-            <P class="last-part">&copy;Copyright 2020</P>
-        </small>
+    <P> <small  class="last-part" >
+            &copy;Copyright 2020
+        </small></P>
     </footer>
 
 </body>
