--- a/index.html
+++ b/index.html
@@ -155,9 +155,8 @@
             <i class="fa fa-linkedin"></i>
 
         </figure>
-        <small>
-            <P class="last-part">&copy;Copyright 2020</P>
-        </small>
+        <P><small class="last-part" > &copy;Copyright 2020 
+        </small></P>
 
     </footer>
 
