--- a/ourStory.html
+++ b/ourStory.html
@@ -120,9 +120,9 @@
             <i class="fa fa-linkedin"></i>
 
         </figure>
-        <small>
-            <P class="last-part">&copy;Copyright 2020</P>
-        </small>
+        <P><small class="last-part" >
+            &copy;Copyright 2020
+        </small></P>
 
     </footer>
 
