changed the style

--- a/contact.html
+++ b/contact.html
@@ -50,11 +50,9 @@
     <main>
         <article>
 
-
             <h1 class="contact-heading">Kontakt</h1>
 
             <section class="mainText">
-
                 <h2 class="contactText">Let's Talk Pillow Talk Questions, concerns, we are all ears.</h2>
                 <p class="contactLine"></p>
             </section>
@@ -62,7 +60,8 @@
         </article>
     </main>
 
-    <footer class="contactFooter">
+<footer>
+     <article class="contactFooter">
 
         <!--FORM-->
         <form id="contactForm" action="#">
@@ -77,8 +76,6 @@
 
             <!--BUTTON-->
             <button class="sendButton" type="button">Skicka</button>
-
-
         </form>
         <!--GRIDLINE-->
         <section class="gridLine">
@@ -98,10 +95,12 @@
 
         </figure>
 
-    <P> <small  class="last-part" >
+       <P> <small  class="last-part" >
             &copy;Copyright 2020
         </small></P>
-    </footer>
+  </article>
+
+</footer>
 
 </body>
 
