--- a/contact.html
+++ b/contact.html
@@ -51,10 +51,10 @@
         <article>
 
             <h1 class="contact-heading">Kontakt</h1>
-
+            <p class="contactLine"></p>
             <section class="mainText">
-                <h2 class="contactText">Let's Talk Pillow Talk Questions, concerns, we are all ears.</h2>
-                <p class="contactLine"></p>
+                <h2 class="contactText">Har du bekymmer, frågor, feedback eller funderingar? Låt oss snacka här!</h2>
+              
             </section>
 
         </article>
