changed the style of menu

--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,7 @@
             </p>
 
             <nav class="menu">
+                <p class="logo-text">DE Inredning</p>
                 <ul class="mobile-toggle">
                     <li class="menuList"><a class="smoothScroll" href="index.html">Hem</a></li>
                     <li class="menuList"><a class="smoothScroll" href="#">Design</a></li>
