--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,10 @@
                 <i class="fa fa-shopping-cart"></i>
             </figure>
         </form>
+        <!-- LOGO SECTION -->
+        <section class="logo-section">
+            <p class="logo-text">DE Inredning</p>
+        </section>
 
         <article class="menu-wrap">
             <input type="checkbox" class="toggler">
@@ -39,10 +43,7 @@
                 </ul>
 
             </nav>
-            <!-- LOGO -->
-            <section>
-                <p class="logo-text">DE Inredning</p>
-            </section>
+           
         </article>
     </header>
 
