changed the style of search box

--- a/contact.html
+++ b/contact.html
@@ -16,8 +16,12 @@
 
         <!-- SHOPPING CART -->
         <form id="shopping-nav">
+            <!-- SEARCH BOX -->
+            <section class="search-box">
             <input placeholder="&#xF002; Sök.." type="search" name="search" id="search-nav">
+            </section>
             <figure class="shopping-cart-nav">
+               
                 <i class="fa fa-shopping-cart"></i>
             </figure>
         </form>
@@ -33,7 +37,7 @@
             </p>
 
             <nav class="menu">
-                <p class="logo-text">DE Inredning</p>
+                
                 <ul class="mobile-toggle">
                     <li class="menuList"><a class="smoothScroll" href="index.html">Hem</a></li>
                     <li class="menuList"><a class="smoothScroll" href="#">Design</a></li>
