--- a/ourStory.html
+++ b/ourStory.html
@@ -16,7 +16,11 @@
 
         <!-- SHOPPING CART -->
         <form id="shopping-nav">
+        <!-- SEARCH BOX -->
+            <section class="seach-box">
             <input placeholder="&#xF002; Sök.." type="search" name="search" id="search-nav">
+            </section>
+
             <figure class="shopping-cart-nav">
                 <i class="fa fa-shopping-cart"></i>
             </figure>
