html files are formatted

--- a/contact.html
+++ b/contact.html
@@ -7,10 +7,15 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>DE Inredning</title>
+
+    <meta name="description"
+        content="Vi hjälper dig med vardagsrummet inom inredning. Trygg E-handel. Stillsäker inredning. Fri frakt till butik. Prisvärt kvalitet. Typer: Möbler,vasar, Hyllor.">
 </head>
+
 
 <body style="background-color: rgb(230, 216, 199);">
 
+    
     <!-- HEADER -->
     <header class="mainMenu">
 
@@ -32,6 +37,8 @@
 
         <article class="menu-wrap">
             <input type="checkbox" class="toggler">
+
+            <!-- MENU HAMBURGER ICON -->
             <p class="hamburger">
                 <span class="hamburgerLine"></span>
             </p>
@@ -51,8 +58,8 @@
         </article>
     </header>
 
-    <!--MAIN-->
 
+    <!--MAIN-->
     <main>
         <article>
 
@@ -66,6 +73,8 @@
         </article>
     </main>
 
+
+<!-- FOOTER -->
 <footer>
      <article class="contactFooter">
 
@@ -83,6 +92,7 @@
             <!--BUTTON-->
             <button class="sendButton" type="button">Skicka</button>
         </form>
+
         <!--GRIDLINE-->
         <section class="gridLine">
             <h3 class="follow-social-media"> Följ oss på sociala medier eller prenumerera oss, för att inte missa
@@ -101,6 +111,7 @@
 
         </figure>
 
+<!-- THE LAST P SMALL TAG -->
        <P> <small  class="last-part" >
             &copy;Copyright 2020
         </small></P>
