desciption in HTML

--- a/ourStory.html
+++ b/ourStory.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>DE Inredning</title>
+    <title>vår Historia - stil hit dit </title>
     <meta name="description"
-        content="Vi hjälper dig med vardagsrummet inom inredning. Trygg E-handel. Stillsäker inredning. Fri frakt till butik. Prisvärt kvalitet. Typer: Möbler,vasar, Hyllor.">
+        content="Ed Inredning har startades 2016, efter en semester resa i Asien Kate inhadlade ett antall möbler och föntäner">
 </head>
 
 <body>
