--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>DE Inredning</title>
+    <title>Kontakta oss - design online inred-design</title>
 
     <meta name="description"
-        content="Vi hjälper dig med vardagsrummet inom inredning. Trygg E-handel. Stillsäker inredning. Fri frakt till butik. Prisvärt kvalitet. Typer: Möbler,vasar, Hyllor.">
+        content="Kontakta oss inredning designat av DE Inredning för dig och dina vänner. Snabba leveranser. Fria retur">
 </head>
 
 
