chained html together

--- a/design.html
+++ b/design.html
@@ -50,7 +50,7 @@
                 <ul class="mobile-toggle">
                     <li class="menuList"><a class="smoothScroll" href="index.html">Hem</a></li>
 
-                    <li class="menuList"><a class="smoothScroll" href="#">Design</a></li>
+                    <li class="menuList"><a class="smoothScroll" href="design.html">Design</a></li>
 
                     <li class="menuList"><a class="smoothScroll" href="ourStory.html">Vår Historia</a></li>
 
