--- a/ourStory.html
+++ b/ourStory.html
@@ -48,7 +48,7 @@
                 <!-- LI AND A TAGS -->
                 <ul class="mobile-toggle">
                     <li class="menuList"><a class="smoothScroll" href="index.html">Hem</a></li>
-                    <li class="menuList"><a class="smoothScroll" href="#">Design</a></li>
+                    <li class="menuList"><a class="smoothScroll" href="design.html">Design</a></li>
                     <li class="menuList"><a class="smoothScroll" href="ourStory.html">Vår Historia</a></li>
                     <li class="menuList"><a class="smoothScroll" href="contact.html">Kontakt</a></li>
                 </ul>
