--- a/design.html
+++ b/design.html
@@ -66,43 +66,43 @@
         <article id="design-articles">
 
             <h1>vår kollektion</h1>
-            <article id="image-boxes">
-                <section class="image-section">
+            <section id="image-boxes">
+                <figure class="image-section">
                     <img class="design-img" src="./image/designImg/cactus.jpg" alt="">
                     <h2>Elora</h2>
                     <p>€89.00</p>
-                </section>
+                </figure>
 
-                <section class="image-section">
+                <figure class="image-section">
                     <img class="design-img" src="./image/designImg/iceglass.jpg" alt="">
                     <h2>johanna</h2>
                     <p>€32.00</p>
-                </section>
+                </figure>
 
-                <section class="image-section">
+                <figure class="image-section">
                     <img class="design-img" src="./image/designImg/lamps.jpg" alt="">
                     <h2>Bri</h2>
                     <p>€12.00</p>
-                </section>
+                </figure>
 
-                <section class="image-section">
+                <figure class="image-section">
                     <img class="design-img" src="./image/designImg/wallamp.jpg" alt="">
                     <h2>Ria</h2>
                     <p>€23.00</p>
-                </section>
+                </figure>
 
-                <section class="image-section">
+                <figure class="image-section">
                     <img class="design-img" src="./image/designImg/wallclock.jpg" alt="">
                     <h2>mina</h2>
                     <p>€16.00</p>
-                </section>
+                </figure>
 
-                <section class="image-section">
+                <figure class="image-section">
                     <img class="design-img" src="./image/designImg/waterglass.jpg" alt="">
                     <h2>tina</h2>
                     <p>€16.00</p>
-                </section>
-            </article>
+                </figure>
+            </section>
         </article>
     </main>
     <!-- FOOTER -->
