--- a/design.html
+++ b/design.html
@@ -65,7 +65,7 @@
     <main>
         <article id="design-articles">
 
-            <h1>vår kollektion</h1>
+            <h1 class="heading-design">vår kollektion</h1>
             <section id="image-boxes">
                 <figure class="image-section">
                     <img class="design-img" src="./image/designImg/cactus.jpg" alt="">
@@ -103,6 +103,9 @@
                     <p>€16.00</p>
                 </figure>
             </section>
+            <button class="load-btn" >
+                Load More
+            </button>
         </article>
     </main>
     <!-- FOOTER -->
