the contact form

--- a/index.html
+++ b/index.html
@@ -152,14 +152,13 @@
             <!--FORM-->
             <form id="contactForm" action="#">
 
-                <input id="firstname" placeholder="Förnamn *">
+                <input type="text" id="firstname" placeholder="namn *">
 
-                <input id="email" placeholder="E-postadress ">
+                <input type="email" id="email" placeholder="E-postadress ">
 
-                <input id="subject" placeholder="Ämne">
 
                 <!--TEXTAREA-->
-                <textarea name="message" id="bigMessage" cols="25" rows="5" placeholder="Meddelande"></textarea>
+                <textarea name="message" id="bigMessage" cols="23" rows="15" placeholder="Meddelande"></textarea>
 
                 <!--BUTTON-->
                 <button class="sendButton" type="button">Skicka</button>
