--- a/design.html
+++ b/design.html
@@ -125,11 +125,9 @@
             <!--FORM-->
             <form id="contactForm" action="#">
 
-                <input id="firstname" placeholder="Förnamn *">
+                <input type="text" id="firstname" placeholder="Förnamn *">
 
-                <input id="email" placeholder="E-postadress ">
-
-                <input id="subject" placeholder="Ämne">
+                <input type="email" id="email" placeholder="E-postadress ">
 
                 <!--TEXTAREA-->
                 <textarea name="message" id="bigMessage"  cols="25" rows="14"  placeholder="Meddelande"></textarea>
