--- a/ourStory.html
+++ b/ourStory.html
@@ -106,9 +106,9 @@
 
             <!--FORM-->
             <form id="contactForm" action="#">
-                <input id="firstname" placeholder="Förnamn *">
+                <input type="text" id="firstname" placeholder="Förnamn *">
 
-                <input id="email" placeholder="E-postadress ">
+                <input type="email" id="email" placeholder="E-postadress ">
 
     
 
