--- a/design.html
+++ b/design.html
@@ -73,11 +73,13 @@
                     <p>€89.00</p>
                 </figure>
 
+
                 <figure class="image-section">
                     <img class="design-img" src="./image/designImg/iceglass.jpg" alt="">
                     <h2>johanna</h2>
                     <p>€32.00</p>
                 </figure>
+
 
                 <figure class="image-section">
                     <img class="design-img" src="./image/designImg/lamps.jpg" alt="">
@@ -85,17 +87,20 @@
                     <p>€12.00</p>
                 </figure>
 
+
                 <figure class="image-section">
                     <img class="design-img" src="./image/designImg/wallamp.jpg" alt="">
                     <h2>Ria</h2>
                     <p>€23.00</p>
                 </figure>
 
+
                 <figure class="image-section">
                     <img class="design-img" src="./image/designImg/wallclock.jpg" alt="">
                     <h2>mina</h2>
                     <p>€16.00</p>
                 </figure>
+
 
                 <figure class="image-section">
                     <img class="design-img" src="./image/designImg/waterglass.jpg" alt="">
@@ -104,7 +109,7 @@
                 </figure>
             </section>
             <button class="load-btn" >
-                Load More
+                Ladda Mer
             </button>
         </article>
     </main>
@@ -127,7 +132,7 @@
 
                 <input type="text" id="firstname" placeholder="Förnamn *">
 
-                <input type="email" id="email" placeholder="E-postadress ">
+                <input type="email" id="email" placeholder="E-postadress *">
 
                 <!--TEXTAREA-->
                 <textarea name="message" id="bigMessage"  cols="25" rows="14"  placeholder="Meddelande"></textarea>
