--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
                 <input type="text" id="firstname" placeholder="namn *">
 
-                <input type="email" id="email" placeholder="E-postadress ">
+                <input type="email" id="email" placeholder="E-postadress * ">
 
 
                 <!--TEXTAREA-->
