--- a/ourStory.html
+++ b/ourStory.html
@@ -108,7 +108,7 @@
             <form id="contactForm" action="#">
                 <input type="text" id="firstname" placeholder="Förnamn *">
 
-                <input type="email" id="email" placeholder="E-postadress ">
+                <input type="email" id="email" placeholder="E-postadress *">
 
     
 
