made an image responsive on html

--- a/design.html
+++ b/design.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Vår design</title>
+    <meta name="description" content="Design till fast pris. vi erbjuder enkl och okomlicerande lösningar till vår kunder.
+    Detsamma gäller för designen av våra produkter.">
 </head>
 
 <body>
@@ -68,42 +70,42 @@
             <h1 class="heading-design">vår kollektion</h1>
             <section id="image-boxes">
                 <figure class="image-section">
-                    <img class="design-img" src="./image/designImg/cactus.jpg" alt="">
+                    <img class="design-img" src="./image/designImg/cactus.jpg" alt="a green cactus on the brown table">
                     <h2>Elora</h2>
                     <p>€89.00</p>
                 </figure>
 
 
                 <figure class="image-section">
-                    <img class="design-img" src="./image/designImg/iceglass.jpg" alt="">
+                    <img class="design-img" src="./image/designImg/iceglass.jpg" alt="icy water inside the glass">
                     <h2>johanna</h2>
                     <p>€32.00</p>
                 </figure>
 
 
                 <figure class="image-section">
-                    <img class="design-img" src="./image/designImg/lamps.jpg" alt="">
+                    <img class="design-img" src="./image/designImg/lamps.jpg" alt="copper color lamps on the ceiling">
                     <h2>Bri</h2>
                     <p>€12.00</p>
                 </figure>
 
 
                 <figure class="image-section">
-                    <img class="design-img" src="./image/designImg/wallamp.jpg" alt="">
+                    <img class="design-img" src="./image/designImg/wallamp.jpg" alt="a black lamp on the wall">
                     <h2>Ria</h2>
                     <p>€23.00</p>
                 </figure>
 
 
                 <figure class="image-section">
-                    <img class="design-img" src="./image/designImg/wallclock.jpg" alt="">
+                    <img class="design-img" src="./image/designImg/wallclock.jpg" alt="a white clock with the white background">
                     <h2>mina</h2>
                     <p>€16.00</p>
                 </figure>
 
 
                 <figure class="image-section">
-                    <img class="design-img" src="./image/designImg/waterglass.jpg" alt="">
+                    <img class="design-img" src="./image/designImg/waterglass.jpg" alt="a green leaf with a glass">
                     <h2>tina</h2>
                     <p>€16.00</p>
                 </figure>
