--- a/ourStory.html
+++ b/ourStory.html
@@ -69,9 +69,14 @@
             </section>
 
             <!-- TEAM IMAGE -->
-            <figure class="team-image">
-                <img class="manager-img" src="./image/ana.jpg" alt="">
-            </figure>
+            
+        <!-- IMAGE WITH SRCSET ATTRIBUTE -->
+        <img class="manager-img" srcset="./image/ana-1500w.jpg,
+                                        ./image/ana-2500w.jpg  1.5x,
+                                           ./image/ana.jpg     12x" 
+
+                                 src="./image/ana.jpg"
+                                 alt="kate is smiling and dressed in red">
 
             <!-- DESKTOP TEXT -->
             <section class="desktop-intro">
