--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
             <figure class="slideshow">
 
                 <!-- IMAGES IN SLIDESHOW -->
-                <img class="slide-image" src="image/lampa.jpg" alt="image of two lamps">
+                <img class="slide-image" src="image/lampa.jpg" alt="two lamps hanged on th ceiling">
 
-                <img class="slide-image" src="image/blad.jpg" alt="image of a plant">
+                <img class="slide-image" src="image/blad.jpg" alt=" a green plant on the table">
 
-                <img class="slide-image" src="image/varor.jpg" alt="image of interor design">
+                <img class="slide-image" src="image/varor.jpg" alt=" interor design on the wall">
 
-                <img class="slide-image" src="image/girl.jpg" alt="a girl in living room">
+                <img class="slide-image" src="image/girl.jpg" alt="a girl sitting in the living room">
 
             </figure>
 
@@ -111,7 +111,13 @@
             <!-- TEAM IMAGE  -->
             <figure class="team-image">
 
-                <img class="manager-img" src="./image/ana.jpg" alt="manager image">
+            <!-- IMAGE WITH SRCSET ATTRIBUTE -->
+                <img class="manager-img" srcset="./image/ana-1500w.jpg,
+                                                 ./image/ana-2500w.jpg  1.5x,
+                                                       ./image/ana.jpg  12x"
+                                                        
+                                         src="./image/ana.jpg"
+                                         alt="kate is smiling and dressed in red">
 
                 <!-- FIG CAPTION UNDER THE IMAGE -->
                 <figcaption>
