--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- SHOPPING CART -->
         <form id="shopping-nav">
 
-            <!-- SEARCH- -->
+            <!-- SEARCH BOX -->
             <section class="search-box">
                 <input placeholder=" &#xF002; Sök.." type="search" name="search" id="search-nav">
             </section>
