--- a/ourStory.html
+++ b/ourStory.html
@@ -20,10 +20,11 @@
         <form id="shopping-nav">
 
             <!-- SEARCH BOX -->
-            <section class="seach-box">
+            <section class="search-box">
                 <input placeholder="&#xF002; Sök.." type="search" name="search" id="search-nav">
             </section>
-
+            
+            <!-- SHOPPING CART NAV -->
             <figure class="shopping-cart-nav">
                 <i class="fa fa-shopping-cart"></i>
             </figure>
